[gd_scene load_steps=28 format=3 uid="uid://bum8ktu74fq31"]

[ext_resource type="Script" path="res://ui/gameplay/laws_display.gd" id="1_8q1xl"]
[ext_resource type="Texture2D" uid="uid://df72snr3y1u3e" path="res://spaceship/characters/textures/npc-bc.png" id="2_u243v"]
[ext_resource type="PackedScene" uid="uid://d3qo0o47lmsuh" path="res://ui/gameplay/reprimand_blink_component.tscn" id="2_ucgbh"]
[ext_resource type="Texture2D" uid="uid://dddhsyo13ipas" path="res://spaceship/characters/textures/npc-bm.png" id="3_hm1gk"]
[ext_resource type="Texture2D" uid="uid://bxcsu5ow5a3wm" path="res://spaceship/characters/textures/npc-by.png" id="4_1dmky"]
[ext_resource type="Texture2D" uid="uid://b2hgh28477xg7" path="res://spaceship/characters/textures/npc-gc.png" id="5_c0fb1"]
[ext_resource type="Texture2D" uid="uid://dcbxkp62dbmhc" path="res://spaceship/characters/textures/npc-gm.png" id="6_u2tl0"]
[ext_resource type="Texture2D" uid="uid://bsqx6liytm12a" path="res://spaceship/characters/textures/npc-gy.png" id="7_tms0g"]
[ext_resource type="Texture2D" uid="uid://b5hb6lwiln0en" path="res://spaceship/characters/textures/npc-rc.png" id="8_dj5co"]
[ext_resource type="Texture2D" uid="uid://dtwax6b4ifh0q" path="res://spaceship/characters/textures/npc-rm.png" id="9_f5000"]
[ext_resource type="Texture2D" uid="uid://c7sargdmlhkg2" path="res://spaceship/characters/textures/npc-ry.png" id="10_f70b2"]
[ext_resource type="Texture2D" uid="uid://bg8jslow58fwc" path="res://spaceship/cargo/art/box-1-32.png" id="12_k1idm"]
[ext_resource type="Texture2D" uid="uid://80kssuroofwo" path="res://spaceship/cargo/art/box-2-32.png" id="13_a70qf"]
[ext_resource type="Texture2D" uid="uid://8tjonxr4clyi" path="res://spaceship/cargo/art/box-3-32.png" id="14_tshgy"]
[ext_resource type="Texture2D" uid="uid://b3y6kux6t0sbr" path="res://spaceship/cargo/art/box-4-32.png" id="15_g8pk1"]
[ext_resource type="Texture2D" uid="uid://ctb1q82gxhjb" path="res://spaceship/cargo/art/box-5-32.png" id="16_wwp7m"]
[ext_resource type="Texture2D" uid="uid://cky1x4nuan7k3" path="res://spaceship/cargo/art/box-6-32.png" id="17_3p5mo"]
[ext_resource type="Texture2D" uid="uid://c1vs1msv5ya4b" path="res://spaceship/cargo/art/box-7-32.png" id="18_8yg61"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sp4yr"]
atlas = ExtResource("2_u243v")
region = Rect2(28, 8, 72, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_f13fi"]
atlas = ExtResource("3_hm1gk")
region = Rect2(28, 8, 72, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_4onq8"]
atlas = ExtResource("4_1dmky")
region = Rect2(28, 8, 72, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_1n1q6"]
atlas = ExtResource("5_c0fb1")
region = Rect2(28, 8, 72, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebnug"]
atlas = ExtResource("6_u2tl0")
region = Rect2(28, 8, 72, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kfig"]
atlas = ExtResource("7_tms0g")
region = Rect2(28, 8, 72, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdceb"]
atlas = ExtResource("8_dj5co")
region = Rect2(28, 8, 72, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_ly5uk"]
atlas = ExtResource("9_f5000")
region = Rect2(28, 8, 72, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_totl1"]
atlas = ExtResource("10_f70b2")
region = Rect2(28, 8, 72, 120)

[node name="Rules" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="Laws Display" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8q1xl")

[node name="VBoxContainer" type="VBoxContainer" parent="Laws Display"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="HSeparator2" type="HSeparator" parent="Laws Display/VBoxContainer"]
layout_mode = 2

[node name="title" type="Label" parent="Laws Display/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"TitleLabel"
text = "TODAY'S LAWS"

[node name="subtitle" type="Label" parent="Laws Display/VBoxContainer"]
visible = false
layout_mode = 2
theme_type_variation = &"SubtitleLabel"
text = "DEADLY FORCE AUTHORIZED"

[node name="HSeparator" type="HSeparator" parent="Laws Display/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Laws Display/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Laws Display/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLabel"
text = "LIMITS"

[node name="VBoxContainer" type="VBoxContainer" parent="Laws Display/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Laws Display/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="header" type="Label" parent="Laws Display/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"BodyLabel"
text = "Passengers:"

[node name="passengerlimit" type="Label" parent="Laws Display/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BodyLabel"
text = "22"

[node name="HBoxContainer2" type="HBoxContainer" parent="Laws Display/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="header" type="Label" parent="Laws Display/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_type_variation = &"BodyLabel"
text = "Cargo:"

[node name="cargolimit" type="Label" parent="Laws Display/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BodyLabel"
text = "22"

[node name="Reprimand Blink Component" parent="Laws Display/VBoxContainer/HBoxContainer" instance=ExtResource("2_ucgbh")]
condition = "fatty"

[node name="BannedSectionTitle" type="Label" parent="Laws Display/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderLabel"
text = "BANNED"

[node name="Reprimand Blink Component" parent="Laws Display/VBoxContainer/BannedSectionTitle" instance=ExtResource("2_ucgbh")]
condition = "smuggler"

[node name="FactionsSection" type="VBoxContainer" parent="Laws Display/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="section title" type="Label" parent="Laws Display/VBoxContainer/FactionsSection"]
visible = false
layout_mode = 2
theme_type_variation = &"HeaderLabel"
text = "Banned Factions"

[node name="CriminalList" type="HBoxContainer" parent="Laws Display/VBoxContainer/FactionsSection"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Laws Display/VBoxContainer/FactionsSection/CriminalList"]
visible = false
custom_minimum_size = Vector2(32, 48)
layout_mode = 2
texture = SubResource("AtlasTexture_sp4yr")
expand_mode = 1
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="Laws Display/VBoxContainer/FactionsSection/CriminalList"]
visible = false
custom_minimum_size = Vector2(32, 48)
layout_mode = 2
texture = SubResource("AtlasTexture_f13fi")
expand_mode = 1
stretch_mode = 4

[node name="TextureRect3" type="TextureRect" parent="Laws Display/VBoxContainer/FactionsSection/CriminalList"]
visible = false
custom_minimum_size = Vector2(32, 48)
layout_mode = 2
texture = SubResource("AtlasTexture_4onq8")
expand_mode = 1
stretch_mode = 4

[node name="TextureRect4" type="TextureRect" parent="Laws Display/VBoxContainer/FactionsSection/CriminalList"]
custom_minimum_size = Vector2(32, 48)
layout_mode = 2
texture = SubResource("AtlasTexture_1n1q6")
expand_mode = 1
stretch_mode = 4

[node name="TextureRect5" type="TextureRect" parent="Laws Display/VBoxContainer/FactionsSection/CriminalList"]
custom_minimum_size = Vector2(32, 48)
layout_mode = 2
texture = SubResource("AtlasTexture_ebnug")
expand_mode = 1
stretch_mode = 4

[node name="TextureRect6" type="TextureRect" parent="Laws Display/VBoxContainer/FactionsSection/CriminalList"]
custom_minimum_size = Vector2(32, 48)
layout_mode = 2
texture = SubResource("AtlasTexture_6kfig")
expand_mode = 1
stretch_mode = 4

[node name="TextureRect7" type="TextureRect" parent="Laws Display/VBoxContainer/FactionsSection/CriminalList"]
custom_minimum_size = Vector2(32, 48)
layout_mode = 2
texture = SubResource("AtlasTexture_tdceb")
expand_mode = 1
stretch_mode = 4

[node name="TextureRect8" type="TextureRect" parent="Laws Display/VBoxContainer/FactionsSection/CriminalList"]
custom_minimum_size = Vector2(32, 48)
layout_mode = 2
texture = SubResource("AtlasTexture_ly5uk")
expand_mode = 1
stretch_mode = 4

[node name="TextureRect9" type="TextureRect" parent="Laws Display/VBoxContainer/FactionsSection/CriminalList"]
custom_minimum_size = Vector2(32, 48)
layout_mode = 2
texture = SubResource("AtlasTexture_totl1")
expand_mode = 1
stretch_mode = 4

[node name="ContrabandSection" type="VBoxContainer" parent="Laws Display/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="section title" type="Label" parent="Laws Display/VBoxContainer/ContrabandSection"]
visible = false
layout_mode = 2
theme_type_variation = &"HeaderLabel"
text = "Banned Goods"

[node name="ContrabandList" type="HBoxContainer" parent="Laws Display/VBoxContainer/ContrabandSection"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Laws Display/VBoxContainer/ContrabandSection/ContrabandList"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("12_k1idm")
expand_mode = 1
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="Laws Display/VBoxContainer/ContrabandSection/ContrabandList"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("13_a70qf")
expand_mode = 1
stretch_mode = 4

[node name="TextureRect3" type="TextureRect" parent="Laws Display/VBoxContainer/ContrabandSection/ContrabandList"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("14_tshgy")
expand_mode = 1
stretch_mode = 4

[node name="TextureRect4" type="TextureRect" parent="Laws Display/VBoxContainer/ContrabandSection/ContrabandList"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("15_g8pk1")
expand_mode = 1
stretch_mode = 4

[node name="TextureRect5" type="TextureRect" parent="Laws Display/VBoxContainer/ContrabandSection/ContrabandList"]
visible = false
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("16_wwp7m")
expand_mode = 1
stretch_mode = 4

[node name="TextureRect6" type="TextureRect" parent="Laws Display/VBoxContainer/ContrabandSection/ContrabandList"]
visible = false
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("17_3p5mo")
expand_mode = 1
stretch_mode = 4

[node name="TextureRect7" type="TextureRect" parent="Laws Display/VBoxContainer/ContrabandSection/ContrabandList"]
visible = false
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("18_8yg61")
expand_mode = 1
stretch_mode = 4
